--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start:clearcache": "expo start --clear",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -13,6 +14,7 @@
     "@apollo/client": "^3.13.1",
     "@expo/metro-config": "^0.17.4",
     "@expo/metro-runtime": "~3.1.1",
+    "dotenv": "^16.4.7",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
