--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -13,7 +13,7 @@
     "test:dev": "jest --watchAll"
   },
   "jest": {
-    "preset": "react-native",
+    "preset": "jest-expo",
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     },
@@ -31,6 +31,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "dotenv": "^16.4.7",
     "expo": "~50.0.17",
+    "expo-linking": "^6.2.2",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
     "graphql": "^15.8.0",
@@ -53,7 +54,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-native": "^5.0.0",
     "jest": "^29.7.0",
-    "jest-expo": "^52.0.6"
+    "jest-expo": "~50.0.4"
   },
   "private": true
 }
