--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.73.6",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.30.0",
+    "use-debounce": "^10.0.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
